# HMM-Speech

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindR.cmake  GoogleTest-CMakeLists.txt.in  hmmConfig.cmake.in
data/: devtool.sh
include/hmm/: graphics.hpp  simd.hpp
include/hmm/audio/: Audio.hpp  DSP.hpp  FFT.hpp  Windows.hpp  fft.hpp  windows.hpp
include/hmm/internal/: DSP.hpp  FFT.hpp  Pipeline.hpp  Ptr.hpp  Windows.hpp  hmmintrin.hpp  utils.hpp
include/hmm/io/: fpm_wav.h  graphics.hpp
src/audio/: Audio.cpp
src/io/: graphics.cpp
test/: CMakeLists.txt
test/src/: DSP-test.cpp  FFT-test.cpp  FFT-test.hpp  Windows-test.cpp  fft-test.cpp  fft-test.hpp  hmmintrin-test.cpp  utils-test.cpp
